# chess

./: CMakeLists.txt  Move.cpp  Move.hpp  README.md  main.cpp
board/: Board.hpp  ChessBoard.cpp  ChessBoard.hpp  IBoard.hpp  Square.cpp  Square.hpp
pieces/: Bishop.cpp  Bishop.hpp  King.hpp  Knight.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Rook.cpp  Rook.hpp
src/: CMakeLists.txt  main.cpp
src/boards/: Board.hpp  CMakeLists.txt  Square.cpp  Square.hpp
src/moves/: CMakeLists.txt  Move.cpp  Move.hpp
src/pieces/: CMakeLists.txt  King.cpp  Knight.cpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Piece.ipp  Queen.hpp
tst/: CMakeLists.txt  test_piece.cpp
